# supernovas_rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
supernovas/: Cargo.toml
supernovas/examples/: eop2.short  example.rs
supernovas/src/: ephem.rs  error.rs  lib.rs  positions.rs  simbad.rs  time.rs
supernovas_sys/: Cargo.toml  build.rs  wrapper.h
