[package]
name = "supernovas"
version = "0.1.0"
edition = "2021"

[dependencies]
supernovas_sys = { path = "../supernovas_sys" }
thiserror = "1"
hifitime = { version = "3", optional = true, features = ["ut1"] }
reqwest = { version = "0.12", optional = true, features = ["blocking"] }
quick-xml = { version = "0.36", optional = true, features = ["serialize"] }
calceph = { git = "https://github.com/kiranshila/calceph_rs", optional = true, features = ["threadsafe"] }

[features]
default = ["hifitime", "simbad", "calceph"]
hifitime = ["dep:hifitime"]
simbad = ["dep:reqwest", "dep:quick-xml"]
calceph = ["dep:calceph"]

[[example]]
name = "example"
required-features = ["hifitime"]
